methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
  avance()
        ^